--- a/README.org
+++ b/README.org
@@ -10,7 +10,7 @@
 You can then add =~/.emacs.d/bin/doom= to your ~PATH~ environment.
 
 ** macOS
-** Windows (Msys2) :DEPRECATED:
+** Windows (Msys2)
 *** MSYS2 config
 Install [[https://www.msys2.org/][MSYS2]].
 - set ~MSYS2_PATH_TYPE=inherit~ in Windows environment.
@@ -36,22 +36,24 @@ I use mingw64 terminal as my default one, which has all path in environment and 
 *** GUI shortcut
 You can add a shortcut to =C:\msys64\mingw64\bin\runemacs.exe= and rename the shortcut to Emacs, then changing the =Start in:= property to the path you want to start.
 
-*** Org (beorg)
+*** File sync
 1. Install iCloud in Microsoft Store
 2. Link the directory
    #+begin_src sh
-     sudo ln -s '.\iCloudDrive\iCloud~com~appsonthemove~beorg\org\' org
+     ln -s ~/iCloudDrive/iCloud\~com\~appsonthemove\~beorg/org org
+     ln -s ~/iCloudDrive/Documents/Roam roam
+     ln -s ~/iCloudDrive/3L68KQB4HG\~com\~readdle\~CommonDocuments/ PDFs
    #+end_src
 
 *** UTF-8
 In the ~Control Panel\Clock and Region -> Region -> Administrative -> Change system locale... -> [x] Beta: Use Unicode UTF-8 for worldwide language support~.
 ** Windows (WSL1)
-*** Install tools
+*** Install
 #+begin_src sh
-scoop install archwsl vcxsrv chrome
+scoop install archwsl vcxsrv
 #+end_src
 
-*** Config zsh in wsl
+*** Config
 [[file:~/.zshenv][.zshenv]]
 #+begin_src sh
 # doom-emacs
