--- a/README.org
+++ b/README.org
@@ -96,7 +96,7 @@ Ref: https://wiki.archlinux.org/index.php/Locale
 
 **** Install tools
 #+begin_src sh
-  sudo pacman -S fd ripgrep sqlite xdg-utils base-devel
+  sudo pacman -S fd ripgrep sqlite xdg-utils base-devel texlive-most texlive-lang
 #+end_src
 
 Ref: https://wiki.archlinux.org/index.php/default_applications
