Add texlive-picture in readme

--- a/README.org
+++ b/README.org
@@ -162,7 +162,7 @@ Ref: https://wiki.archlinux.org/index.php/Locale
 
 ***** Install tools
 #+begin_src sh
-  sudo pacman -S git github-cli fd ripgrep sqlite xdg-utils mailcap base-devel texlive-core texlive-langchinese librime poppler-data aspell aspell-en texlab graphviz
+  sudo pacman -S git github-cli fd ripgrep sqlite xdg-utils mailcap base-devel texlive-core texlive-pictures texlive-langchinese librime poppler-data aspell aspell-en texlab graphviz
 #+end_src
 
 Ref: https://wiki.archlinux.org/index.php/default_applications
