--- a/README.org
+++ b/README.org
@@ -100,18 +100,6 @@ You can then add =~/.emacs.d/bin/doom= to your ~PATH~ environment.
 #+begin_src sh
 Set-PSReadLineOption -EditMode Emacs
 #+end_src
-**** Git
-#+begin_src gitconfig
-[pull]
-        rebase = true
-[credential]
-        helper = manager-core
-[credential "https://github.com"]
-        helper = !gh auth git-credential
-[core]
-        autocrlf = true
-#+end_src
-
 *** MSYS2
 Install [[https://www.msys2.org/][MSYS2]].
 - set ~MSYS2_PATH_TYPE=inherit~ in Windows environment.
@@ -146,7 +134,7 @@ You can add a shortcut to =C:\msys64\mingw64\bin\runemacs.exe= and rename the sh
 **** UTF-8
 In the ~Control Panel\Clock and Region -> Region -> Administrative -> Change system locale... -> [x] Beta: Use Unicode UTF-8 for worldwide language support~.
 
-*** WSL
+*** ArchWSL
 **** Install tools
 #+begin_src sh
   scoop install archwsl vcxsrv chrome
@@ -155,7 +143,7 @@ In the ~Control Panel\Clock and Region -> Region -> Administrative -> Change sys
 **** WSL system setting
 ***** Display
 #+begin_src sh
-sudo pacman -S noto-fonts-cjk noto-fonts-emoji noto-fonts-extra ttf-fira-code
+  sudo pacman -S noto-fonts-cjk noto-fonts-emoji noto-fonts-extra ttf-fira-code ttf-dejavu
 #+end_src
 
 Ref: https://wiki.archlinux.org/index.php/Locale
